feat: rewrite user model
